fixed spacing

--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ header {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  gap: 50px;
+  gap: 30px;
 }
 .hero-review-wrapper p {
   color: #8d8d8d;
